--- a/css/style.css
+++ b/css/style.css
@@ -576,7 +576,7 @@ footer nav a {
   .attivita-ed-esperienze {
     grid-template-columns: 1fr;
     gap: 16px;
-    padding: 16px;
+    padding: 0 16px;
   }
 
   .box-testo h2 {
