--- a/css/style.css
+++ b/css/style.css
@@ -575,7 +575,8 @@ footer nav a {
   .attivita-ed-esperienze {
     grid-template-columns: 1fr;
     gap: 16px;
-    padding: 0 5px;
+    padding: 0 10px;  
+    width: 100%;  
   }
 
   .box-testo h2 {
