--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,7 @@ section.intro {
   flex-direction: column;
   gap: 25px;
   padding: 32px 16px; 
+  text-align: center;
 }
 
 .card,
@@ -526,7 +527,7 @@ footer nav a {
 
 
 .paragrafo p{
-  max-width: 60%;
+  max-width: 70%;
   line-height: 1.6;
   margin-left: 15%;
   align-items: center;
@@ -550,7 +551,7 @@ footer nav a {
   width: 50%;
   margin: 0;
   margin-left: 5%;
-  font-size: 16px;
+  font-size: 12px;
 }
 
 .nav-bar a:first-of-type {
@@ -639,6 +640,7 @@ footer nav a {
   flex-direction: column;
   justify-content: space-between;
   padding: 20px 40px;
+  text-alig:center;
 }
 
 
