--- a/css/style.css
+++ b/css/style.css
@@ -572,7 +572,9 @@ footer nav a {
 }
 
 .content {
-  max-width: 65%;
+  max-width: 80%;
+  align-items: center;
+  align-content: center;
   
 }
 
@@ -592,13 +594,13 @@ footer nav a {
 .content h1 {
   font-size: 24px;
   margin: 0;
-  margin-bottom: 5px;
+  
   align-items: center;
   align-content: center;
 }
 
 .content p {
-  margin-bottom: 60px;
+
   font-size: 18px;
  
 }
