--- a/css/style.css
+++ b/css/style.css
@@ -575,6 +575,7 @@ footer nav a {
   max-width: 80%;
   align-items: center;
   align-content: center;
+  gap:0px;
   
 }
 
@@ -583,6 +584,7 @@ footer nav a {
   text-align: center;
   align-items: center;
   align-content: center;
+  gap:0px;
 }
 
 
@@ -591,6 +593,7 @@ footer nav a {
   text-align: center;
   align-items: center;
   align-content: center; 
+  gap:0px;
  }
 
 .prova-img {
