--- a/css/style.css
+++ b/css/style.css
@@ -534,7 +534,7 @@ footer nav a {
 
 
 .paragrafo p{
-  max-width: 70%;
+  max-width: auto;
   margin-left: 15%;
   align-items: center;
   align-content: center;
